Minor bugs fixed.

--- a/dotfiles/ranger/rc.conf
+++ b/dotfiles/ranger/rc.conf
@@ -389,7 +389,7 @@ map <c-d>   quitall
 
     map <Space> mark_files toggle=True
     map v       toggle_visual_mode
-    map V       mark
+    map V       mark_files toggle=True all=True
     map fv      console mark%space
     map cv      unmark
 
