vim & ranger key mapping overhaul.

--- a/dotfiles/ranger/rc.conf
+++ b/dotfiles/ranger/rc.conf
@@ -313,8 +313,7 @@ alias setl  setlocal
 
 alias filter     scout -prts
 alias find       scout -aets
-#alias mark       scout -mr
-alias mark       scout -mfrs
+alias mark       scout -mr
 alias unmark     scout -Mr
 #alias search     scout -rs
 alias search     scout -efrs
@@ -351,34 +350,37 @@ map <c-d>   quitall
 
     map k       move up=1
     map j       move down=1
-    map <c-u>   move up=1     pages=True
-    map <c-o>   move down=1   pages=True
-    map fk      move to=0
-    map fj      move to=-1
+    map K       move up=1     pages=True
+    map J       move down=1   pages=True
+    map H       move to=0
+    map L       move to=-1
+
+    # searching
+        map /   console search%space
+        map N   search_next forward=False
+        map n   search_next
 
     # to directory
         map h   move left=1
         map l   move right=1
-        map fl  cd -r %f
-        map ml  cd -r .
-        map K   move_parent -1
-        map J   move_parent 1
+        map mp  cd -r ..
+        map mc  cd -r %f
         map mr  cd /
         map mh  cd ~
         map md  cd ~/Documents
-        map mj  cd ~/Downloads
+        map mw  cd ~/Downloads
         map mt  cd ~/.local/share/Trash/files
 
-    # to starred
+    # star
         map ms  cd ~/Starred
-        map ss  chain copy; cd ~/Starred; paste_symlink; history_go -1; uncut; unmark
+        map as  chain copy; cd ~/Starred; paste_symlink; history_go -1; uncut; unmark
 
-    # to bookmark
+    # bookmark
         map mb<any> enter_bookmark %any
-        map sb<any> set_bookmark %any
+        map ab<any> set_bookmark %any
         map cb<any> unset_bookmark %any
         map mb<bg>  draw_bookmarks
-        copymap mb<bg> sb<bg> cb<bg>
+        copymap mb<bg> ab<bg> cb<bg>
 
     # in history
         map M   history_go -1
@@ -390,7 +392,6 @@ map <c-d>   quitall
     map <Space> mark_files toggle=True
     map v       toggle_visual_mode
     map V       mark_files toggle=True all=True
-    map fv      console mark%space
     map cv      unmark
 
     # tagging
@@ -404,8 +405,8 @@ map <c-d>   quitall
     map ad  console mkdir%space
     map af  console touch%space
 
-    map i   chain draw_possible_programs; console open_with%%space
-    map I   display_file
+   #map i   display_file
+    map O   chain draw_possible_programs; console open_with%%space
 
     map dd  chain cut; unmark
     map D   chain cut mode=toggle; unmark
@@ -421,111 +422,105 @@ map <c-d>   quitall
     map pl  chain paste_symlink relative=False; uncut
 
     map cc  uncut
-    map C   chain uncut; unmark; filter_stack clear; set sort=natural; set sort_reverse=False;
+   #map C   chain uncut; unmark; filter_stack clear; set sort=natural; set sort_reverse=False;
 
     map r   rename_append
     map R   console rename%space
 
-    map ob  shell nvim -S Session.vim
-    map od  console shell gio trash %s
+   #map ob  shell nvim -S Session.vim
+    map od  console shell gio trash '%s'
     map os  chain stage; unmark
-    map cs  chain unstage; unmark
-    map op  console chmod%space
-    map ot  shell $SHELL
+    map oS  chain unstage; unmark
     map oz  console -p13 shell zip -r  %%c
+    map op  console chmod%space
 
-    # get
-        map gcl shell -p wc -l %s
-        map gsc get_cumulative_size
-        map gsl shell -p du --max-depth=1 -h --apparent-size
-        map gsL shell -p du --max-depth=1 -h --apparent-size | sort -rh
+    # show
+        map Il shell -p wc -l %s
+       #map ws  get_cumulative_size
+       #map Iu  shell -p du --max-depth=1 -h --apparent-size
+        map IU  shell -p du --max-depth=1 -h --apparent-size | sort -rh
 
 
 # Viewing
 
-    # searching
-        map /   console search%space
-        map N   search_next forward=False
-        map n   search_next
-
-    # Filtering
-        map .n  console filter_stack add name%space
-        map .m  console filter_stack add mime%space
-        map .d  filter_stack add type d
-        map .f  filter_stack add type f
-        map .l  filter_stack add type l
-        map .|  filter_stack add or
-        map .&  filter_stack add and
-        map .!  filter_stack add not
-       #map .r  console filter_stack rotate
-       #map .*  filter_stack decompose
-        map g.  filter_stack show
-        map >   filter_stack pop
-        map c.  filter_stack clear
-
-    # Sorting
-        map <   set sort_reverse!
-        map c,  chain set sort=natural;   set sort_reverse=False
-        map td  set sort_directories_first!
-       #map ,z  set sort=random
-        map ,s  chain set sort=size;      set sort_reverse=False
-        map ,b  chain set sort=basename;  set sort_reverse=False
-        map ,n  chain set sort=natural;   set sort_reverse=False
-        map ,m  chain set sort=mtime;     set sort_reverse=False
-        map ,c  chain set sort=ctime;     set sort_reverse=False
-        map ,a  chain set sort=atime;     set sort_reverse=False
-        map ,t  chain set sort=type;      set sort_reverse=False
-        map ,e  chain set sort=extension; set sort_reverse=False
-
-        map ,S  chain set sort=size;      set sort_reverse=True
-        map ,B  chain set sort=basename;  set sort_reverse=True
-        map ,N  chain set sort=natural;   set sort_reverse=True
-        map ,M  chain set sort=mtime;     set sort_reverse=True
-        map ,C  chain set sort=ctime;     set sort_reverse=True
-        map ,A  chain set sort=atime;     set sort_reverse=True
-        map ,T  chain set sort=type;      set sort_reverse=True
-        map ,E  chain set sort=extension; set sort_reverse=True
-
-    # toggle
-        map th  set show_hidden!
-        map tv  set viewmode!
-        map tg  set vcs_aware!
-        map tpd set preview_directories!
-        map tpf set preview_files!
-        map tpi set preview_images!
-        copymap th <tab>
+    map .   set show_hidden!
 
     # file display
-        map Tf  linemode filename
-        map Ti  linemode fileinfo
-        map Tm  linemode mtime
-        map Tp  linemode permissions
-        map Ts  linemode sizemtime
-        map Tt  linemode metatitle
+        map ,f  linemode filename
+        map ,i  linemode fileinfo
+        map ,m  linemode mtime
+        map ,p  linemode permissions
+        map ,s  linemode sizemtime
+        map ,t  linemode metatitle
+
+    # Sorting
+        map sr  set sort_reverse!
+        map sd  set sort_directories_first!
+
+       #map sz  set sort=random
+        map ss  chain set sort=size;      set sort_reverse=False
+        map sb  chain set sort=basename;  set sort_reverse=False
+        map sn  chain set sort=natural;   set sort_reverse=False
+        map sm  chain set sort=mtime;     set sort_reverse=False
+        map sc  chain set sort=ctime;     set sort_reverse=False
+        map sa  chain set sort=atime;     set sort_reverse=False
+        map st  chain set sort=type;      set sort_reverse=False
+        map se  chain set sort=extension; set sort_reverse=False
+
+        map sS  chain set sort=size;      set sort_reverse=True
+        map sB  chain set sort=basename;  set sort_reverse=True
+        map sN  chain set sort=natural;   set sort_reverse=True
+        map sM  chain set sort=mtime;     set sort_reverse=True
+        map sC  chain set sort=ctime;     set sort_reverse=True
+        map sA  chain set sort=atime;     set sort_reverse=True
+        map sT  chain set sort=type;      set sort_reverse=True
+        map sE  chain set sort=extension; set sort_reverse=True
+
+    # Filtering
+        map fn  console filter_stack add name%space
+        map fm  console filter_stack add mime%space
+        map fd  filter_stack add type d
+        map ff  filter_stack add type f
+        map fl  filter_stack add type l
+        map f|  filter_stack add or
+        map f&  filter_stack add and
+        map f!  filter_stack add not
+       #map .r  console filter_stack rotate
+       #map .*  filter_stack decompose
+        map Sf  filter_stack show
+        map F   filter_stack pop
+        map cf  filter_stack clear
 
 
 # System
 
     map :   console
+    map ;r  console set column_ratios%space
     map ;s  console shell%space
+    map ;t  shell $SHELL
 
-    # set
-        map <C-r> chain reset; redraw_window; reload_cwd
-        map ;r  console set column_ratios%space
-
-    # get
-        map gh  help
-        map gl  display_log
-        map gt  taskview_open
+    map <C-r> chain reset; redraw_window; reload_cwd
 
     # tabs
-        map H   tab_move -1
-        map L   tab_move 1
+        map gh  tab_move -1
+        map gl  tab_move 1
         map at  tab_new
         map q   tab_close
         map Q   tab_restore
-        map sh  tab_shift -1
-        map sl  tab_shift 1
+        map Th  tab_shift -1
+        map Tl  tab_shift 1
+
+    # toggle
+        map tv  set viewmode!
+        map tg  set vcs_aware!
+        map td  set preview_directories!
+        map tf  set preview_files!
+       #map ti  set preview_images!
+
+    # show
+        map Sh  help
+        map Sl  display_log
+        map St  taskview_open
 
 #map R     reload_cwd
 #map F     set freeze_files!
