--- a/dotfiles/ranger/rc.conf
+++ b/dotfiles/ranger/rc.conf
@@ -363,8 +363,7 @@ map <c-d>   quitall
     # to directory
         map h   move left=1
         map l   move right=1
-        map mp  cd -r ..
-        map mc  cd -r %f
+        map mp  cd -r .
         map mr  cd /
         map mh  cd ~
         map md  cd ~/Documents
@@ -428,10 +427,12 @@ map <c-d>   quitall
     map R   console rename%space
 
    #map ob  shell nvim -S Session.vim
-    map od  console shell gio trash '%s'
+    map od  console shell gio trash %s
+    map om  console -p6 sshfs  %d
+    map oM  console fusermount -u %d
     map os  chain stage; unmark
     map oS  chain unstage; unmark
-    map oz  console -p13 shell zip -r  %%c
+    map oz  console -p13 shell zip -r  %s
     map op  console chmod%space
 
     # show
