--- a/dotfiles/ranger/rc.conf
+++ b/dotfiles/ranger/rc.conf
@@ -28,7 +28,7 @@ set viewmode miller
 #set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 3,8,5
+set column_ratios 2,5,2
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -326,11 +326,15 @@ alias travel     scout -aefklst
 
 map c <nop>
 map d <nop>
+map E <nop>
+map G <nop>
 map g <nop>
 map m <nop>
 map o <nop>
 map p <nop>
 map u <nop>
+map W <nop>
+map w <nop>
 map y <nop>
 map . <nop>
 
@@ -372,7 +376,8 @@ map <c-d>   quitall
 
     # star
         map ms  cd ~/Starred
-        map as  chain copy; cd ~/Starred; paste_symlink; history_go -1; uncut; unmark
+       #map as  chain copy; cd ~/Starred; paste_symlink; history_go -1; uncut; unmark
+        map as  shell ln -s %F ~/Starred/%f
 
     # bookmark
         map mb<any> enter_bookmark %any
@@ -427,19 +432,19 @@ map <c-d>   quitall
     map R   console rename%space
 
    #map ob  shell nvim -S Session.vim
-    map od  console shell gio trash %s
-    map om  console -p6 sshfs  %d
-    map oM  console fusermount -u %d
-    map os  chain stage; unmark
-    map oS  chain unstage; unmark
-    map oz  console -p13 shell zip -r  %s
+    map ot  console shell gio trash %s
+    map oM  console fusermount -u %F
+    map om  console -p6 sshfs  %F
     map op  console chmod%space
+    map oS  chain unstage; unmark
+    map os  chain stage; unmark
+    map oz  console -p13 shell zip -r  %s
 
     # show
         map Il shell -p wc -l %s
        #map ws  get_cumulative_size
        #map Iu  shell -p du --max-depth=1 -h --apparent-size
-        map IU  shell -p du --max-depth=1 -h --apparent-size | sort -rh
+        map Iu  shell -p du --max-depth=1 -h --apparent-size | sort -rh
 
 
 # Viewing
@@ -447,7 +452,7 @@ map <c-d>   quitall
     map .   set show_hidden!
 
     # file display
-        map ,f  linemode filename
+        map ,n  linemode filename
         map ,i  linemode fileinfo
         map ,m  linemode mtime
         map ,p  linemode permissions
@@ -498,18 +503,18 @@ map <c-d>   quitall
     map :   console
     map ;r  console set column_ratios%space
     map ;s  console shell%space
-    map ;t  shell $SHELL
+    map ;S  shell $SHELL
 
     map <C-r> chain reset; redraw_window; reload_cwd
 
     # tabs
-        map gh  tab_move -1
-        map gl  tab_move 1
+        map <   tab_move -1
+        map >   tab_move 1
         map at  tab_new
         map q   tab_close
         map Q   tab_restore
-        map Th  tab_shift -1
-        map Tl  tab_shift 1
+        map t<  tab_shift -1
+        map t>  tab_shift 1
 
     # toggle
         map tv  set viewmode!
